# nexus-AI-document-intelligence-platform

./: .env.example  .gitignore  LEARNING.md  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml
.github/workflows/: ci.yml
ai/rag/: chunking.py  embeddings.py  pdf_parser.py  retrieval.py
infrastructure/kubernetes/ingestion/: configmap.yaml  deployment.yaml  postgres.yaml  redis.yaml  service.yaml
infrastructure/kubernetes/namespaces/: namespaces.yaml
infrastructure/kubernetes/processing/: configmap.yaml  deployment.yaml  qdrant.yaml  uploads-pv.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/otel-collector/: config.yaml
observability/prometheus/: prometheus.yml
scripts/: seed_documents.py
services/ingestion-api/: Dockerfile  pyproject.toml
services/ingestion-api/app/: main.py
services/ingestion-api/app/core/: config.py  database.py  queue.py  telemetry.py
services/ingestion-api/app/models/: document.py
services/ingestion-api/app/routes/: documents.py  health.py
services/ingestion-api/tests/: conftest.py  test_documents.py
services/ingestion_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/processing-worker/: Dockerfile  pyproject.toml
services/processing-worker/app/: config.py  database.py  main.py
